
==== Dependencies source jars downloaded

If source jars for dependencies are available on the repositories, they are downloaded and set up on the `Leiningen Dependencies` classpath container. (Thank you Zhang Yaokun - aka paxnil on Github - for the pull request!)

==== Debugging Clojure Projects

- It is now possible to add breakpoints on `cljx` files in addition to `cljs` files.

=== Bug fixes

- Don't activate Leiningen commands in wrong places in the IDE (e.g. in unrelated contextual menus). Fix Issue #642

== Changes between Counterclockwise 0.25.2 and 0.26.0

`0.26.0` released on July 10, 2014

=== Enhancements

==== New Clojure Wizard

The wizard now accepts `lein new` template arguments. Simply put them after the template name.

==== REPL

- Adds preferences for REPL history - Contributed by Gunnar Völkel
  - Preference for REPL history size.
  - Preference for REPL history persistence schedule. 
- zombie REPLs (when connection is lost)
  - are automatically disabled (buttons and text grayed, input area non editable)
  - and won't be used for sending code from editors

=== Bug fixes

- `New Clojure namespace` wizard now works with fully qualified namespaces, pre-fills the input text with the currently selected package name and creates missing packages on the fly. Fix Issue #468
- `New Clojure namespace` wizard now accepts file starting with numbers. Fix Issue #466
- Correct indenting of new threading macros, as-> cond-> some->. Fix Issue #554
- `F3 Navigate to Definition` was not working for single segment namespaces. Fix Issue #572 (Thanks isto.nikula for the patch!)
- Upgraded missing dependency on `ccw.server 0.1.1` which is where the fix for Code Completion not succeeding sometimes is located!
- `REPL View`: Better handling of cursor movement in output area of REPL. Fix Issue #529
  - You can use arrow keys, copy keys in the REPL output area
  - You can use Tab key to switch to the REPL input area